tests/baselines/reference/ClassDeclaration25.errors.txt
==== tests/cases/compiler/ClassDeclaration25.ts (1 errors) ====
    interface IList<T> {
        data(): T;
        next(): string;
    }
    class List<U> implements IList<U> {
        data(): U;
        ~~~~
!!! ClassDeclaration25.ts(6,5): error TS2238: Function implementation expected.
        next(): string;
    }
    